# course-manager

./: .gitignore  QUICK_START.md  README.md  START_SCRIPT_IMPROVEMENTS.md  angular.json  frontend-refactor-plan.md  fullstack-modernization-plan.md  package-lock.json  package.json  start-course-manager.bat
.github/: copilot-instructions.md
docs/: student-class-display-design.md
scripts/: capture-readme-screens.mjs  start-dev.mjs
scripts/seed/: README.md  generate-scenario-pack.mjs
server/: .env.example  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260407_0001_initial_schema.py  20260407_0002_add_classes_and_student_class_id.py
server/app/: main.py
server/app/api/: router.py
server/app/api/routes/: analytics.py  classes.py  courses.py  enrollments.py  health.py  students.py  teachers.py
server/app/core/: config.py
server/app/db/: base.py  session.py
server/app/models/: __init__.py  activity_log.py  classroom.py  course.py  enrollment.py  student.py  teacher.py
server/app/schemas/: __init__.py  analytics.py  base.py  classroom.py  course.py  enrollment.py  student.py  teacher.py
server/app/services/: seed_loader.py
server/scripts/: check_seed_needed.py  import_seed.py
server/tests/: test_check_seed_needed.py  test_health.py
src/: index.html  styles.scss
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/activity-log/: activity-log.component.html  activity-log.component.scss  activity-log.component.ts
(+135 files in other folders)
